# internal/server/oapi/swagger.json
@@ -627,6 +627,16 @@
                         },
                         "description": "Bad Request"
                     },
+                    "422": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/server.errorResponse"
+                                }
+                            }
+                        },
+                        "description": "source image signature verification failed"
+                    },
                     "503": {
                         "content": {
                             "application/json": {
